static/styles/models.css
@import url(http://fonts.googleapis.com/css?family=Audiowide);

body{
  background: #303030;
}

.clear:before, .clear:after {
  content:"";
  display:table
}

.clear:after {
  clear:both
}

.clear {
  zoom:1
}

#image-placeholder {
  height: 90px;
  width: 90px;
  position: relative;
  top: 4px;
  border-radius: 49px;
}

h1, h2, h3, h4, h5, h6, li b {
    color: #323232;
    text-transform: uppercase;
    font-family: 'Audiowide', sans-serif;
    font-weight: 600;
    margin-top: 0px;
    margin-bottom: 10px;
    letter-spacing: 1px;
}

li {
    color: #323232;
    font-family: 'Audiowide', sans-serif;
    margin-top: 0px;
    margin-bottom: 10px;
}

h1 {
	color: white;
	position: relative;
    text-align: center;
  	top: 80px;
    font-size: 43px;
    font-size: 2.5vw;
    letter-spacing: 2px;
    line-height: 40px;
}

h3 {
    letter-spacing: 0px;
}

h4 {
  color: white;
  position: relative;
  text-align: center;
  top: 125px;
  transform: translate(-5%)
}

#sort-order {
  position: relative;
  left: 50%;
  top: 80px;
  transform: translate(10%)
}

/* = table
------------------------*/
.box-table table{
  text-align: center;
  border-collapse:collapse;
  width:100%;
  margin:0;
  padding:0;
  background:#7f8c8d;
  animation: responsive 5s infinite ease-in-out;
}
.box-table{
  overflow:hidden;
  margin:0 auto;
  display:block;
  width:95%;
  padding:2.5%;
  position: relative;
  top: 10%;
}
.box-table table thead th{
  background-color:#7f8c8d;
  color:#bdc3c7;
  text-align:center;
  padding: 0.75em;
  font-weight: bold;
  font-size: 1.5em;
  height: 1.5em;
  vertical-align: top;
  border-left:0.25em double #95a5a6;

}
.box-table table tbody td,
.box-table table tbody tr{
  font-size:1em;
  border:none;
  padding-top:1em;
  padding-bottom:1em;
}
.box-table table tbody tr:nth-child(odd){
  background:#ecf0f1;
  color:#95a5a6;
}

.box-table table tbody tr:nth-child(odd):hover {
  background:black;
}

.box-table table tbody tr:nth-child(even){
  background:#cdd3d7;
  color:#7f8c8d;
}

.box-table table tbody tr:nth-child(even):hover {
  background:black;
}
.box-table table tbody tr a{
  text-decoration:none;
  color:#e67e22;
}
.box-table table tbody tr a:hover{
  color:#d35400;
}
.box-table .user-tumb{
  width:6em;
  height:6em;
  padding:0;
  display:table-cell;
  text-align:center;
  margin:0 auto;
  -webkit-border-radius:100%;
  -moz-border-radius:100%;
  border-radius:100%;
}


+/* = Mobile Changes
 ------------------------*/

@media only screen and (max-width: 800px){
  .box-table table{
     font-size: 80%;
   }
   h1.h1 {
     font-size: 150%;
   }
}
/* = Error
------------------------*/
.error_table {
  display: block;
  background: #E05E5E;
  color: #D1D1D1;
  font-family: 'Vollkorn', serif;
  text-align: center;
  font-size: 3em;
  width: 90%;
  padding: 5%;
}
/* = Loader
------------------------*/
.loading_table{
  background:#d35400;
  color:#ecf0f1;
  font-family: 'Vollkorn', serif;
  text-align: center;
  font-size: 1em;
  width: 0;
  display: block;
  overflow: hidden;
  height: 1em;
  padding:0.5em;
  animation: table_loader 10s infinite ease;
}
@keyframes table_loader{50%{width:100%}}
@-webkit-keyframes table_loader{50%{width:100%}}
@-moz-keyframes table_loader{50%{width:100%}}
@-ms-keyframes table_loader{50%{width:100%}}
@-o-keyframes table_loader{ 50%{width:100%}}

/* = Parts for both Species and Planets
-----------------------------------------*/

#order {
  position: relative;
  left: 51%;
  top: 80px;
}

#sort-order-characters {
  position: relative;
  left: 50%;
  top: 5px;
  width: 115px;
  padding: 5px 5px 5px 5px;
}

#sort-order-species {
  position: relative;
  left: 50%;
  top: 5px;
  width: 115px;
  padding: 5px 5px 5px 5px;
}

body {
    letter-spacing: 0px;
}

select {
  width: 100px;
  position: relative;
  left: 1%;
  top: 5px;
}

.box-table table thead tr th{
    letter-spacing: 1px;
    white-space: nowrap;
    cursor: pointer;
    text-decoration: none;
    color: #323232;
    transition: all 0.25s ease 0s;
    -moz-transition: all 0.25s ease 0s;
    -webkit-transition: all 0.25s ease 0s;
    -o-transition: all 0.25s ease 0s;
}

    .box-table table thead tr th:hover {
        color: #e6ae49;
        text-decoration: none;
        transition: all 0.25s ease 0s;
        -moz-transition: all 0.25s ease 0s;
        -webkit-transition: all 0.25s ease 0s;
        -o-transition: all 0.25s ease 0s;
    }

